--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!doctype html>
 <html class="no-js" lang="en">
     <head>
-        <title>🔐NS SYSTEMES IT SOLUTIONS</title> <!-- <<< NAME IN TAB: This sets the text part -->
+        <title>NS SYSTEMES IT SOLUTIONS</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="author" content="NS SYSTEMES IT SOLUTIONS">
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <meta name="description" content="NS SYSTEMES IT SOLUTIONS - Empowering your organization with tailored IT solutions.">
 
-        <!-- FAVICON: Make sure 'img/main-log.svg' (your NS shield logo) exists and is a valid SVG/PNG/ICO -->
-        <link rel="shortcut icon" href="img/main-log.svg">
-        <!-- Fallback for other browsers/types if needed -->
-        <!-- <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png"> -->
-        <!-- <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png"> -->
-
+        <link rel="shortcut icon" href="img/main-log.svg"> <!-- Keep your favicon -->
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link rel="stylesheet" href="css/style.css">
@@ -24,10 +19,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <a href="index.html" class="logo">
-                    <!-- Initial logo (e.g., white version for dark hero) -->
-                    <img src="img/logo-white.png" alt="NS SYSTEMES IT SOLUTIONS Logo" class="logo-initial">
-                    <!-- Logo for scrolled state (e.g., color version for white navbar) -->
-                    <img src="img/logo-color.png" alt="NS SYSTEMES IT SOLUTIONS Logo" class="logo-scrolled">
+                    NS SYSTEMES IT SOLUTIONS <!-- Text logo restored -->
                 </a>
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-link">Home</a></li>
@@ -46,7 +38,7 @@
             </div>
         </nav>
 
-        <!-- ... (Rest of your HTML body remains the same as the previous full version) ... -->
+        <!-- ... (Rest of your HTML body remains the same) ... -->
         <section class="hero">
             <div class="hero-content">
                 <h1>Empowering Your Organization with Tailored IT Solutions</h1>
@@ -220,7 +212,7 @@
                         <h4>Contact & Support</h4>
                         <p><i class="fas fa-phone-alt"></i> <a href="tel:+918977540698">+1 302-600-4711</a></p>
                         <p><i class="fas fa-envelope"></i> <a href="mailto:psvs.swarop@gmail.com">sales@nssystemesitsolutions.com</a></p>
-                        <p><i class="fas fa-map-marker-alt"></i> 123 Tech Street, Innovation City, USA</p>
+                        <p><i class="fas fa-map-marker-alt"></i> HYD,INDIA</p>
                     </div>
                 </div>
                 <div class="footer-bottom">
