--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                     </div>
                     <div class="footer-section">
                         <h4>Contact & Support</h4>
-                        <p><i class="fas fa-phone-alt"></i> <a href="tel:+918977540698">+1 302-600-4711</a></p>
-                        <p><i class="fas fa-envelope"></i> <a href="mailto:psvs.swarop@gmail.com">sales@nssystemesitsolutions.com</a></p>
+                        <p><i class="fas fa-phone-alt"></i> <a href="tel:+918977540698">+918977540698</a></p>
+                        <p><i class="fas fa-envelope"></i> <a href="mailto:psvs.swarop@gmail.com">psvs.swarop@gmail.com</a></p>
                         <p><i class="fas fa-map-marker-alt"></i> HYD,INDIA</p>
                     </div>
                 </div>
