--- a/index.html
+++ b/index.html
@@ -60,45 +60,55 @@
         </section>
 
         <!-- ===========================================
-             COMPREHENSIVE IT SERVICES MODULE (Core Solutions)
-        ============================================ -->
-        <section id="core-solutions" class="section comprehensive-services bg-light">
-            <div class="container">
-                <p class="section-subtitle animate-on-scroll">Our Core Solutions</p>
-                <h2 class="section-title animate-on-scroll">Comprehensive IT Services</h2>
-                <p class="section-description animate-on-scroll">
-                    We offer a wide range of IT solutions tailored to meet the unique needs of your business, driving efficiency and innovation.
-                </p>
-                <div class="comprehensive-services-grid">
-                    <div class="service-item-card animate-on-scroll">
-                        <div class="service-item-icon"><i class="fas fa-cloud-upload-alt"></i></div>
-                        <h3>Cloud Services</h3>
-                        <p>Scalable and secure cloud solutions for enhanced agility and efficiency.</p>
-                    </div>
-                    <div class="service-item-card animate-on-scroll" style="animation-delay: 0.1s;">
-                        <div class="service-item-icon"><i class="fas fa-cogs"></i></div>
-                        <h3>Managed IT Services</h3>
-                        <p>Proactive management and support to ensure seamless IT operations.</p>
-                    </div>
-                    <div class="service-item-card animate-on-scroll" style="animation-delay: 0.2s;">
-                        <div class="service-item-icon"><i class="fas fa-project-diagram"></i></div>
-                        <h3>IoT Integration</h3>
-                        <p>Connecting devices and systems for real-time data insights and automation.</p>
-                    </div>
-                    <div class="service-item-card animate-on-scroll" style="animation-delay: 0.3s;">
-                        <div class="service-item-icon"><i class="fas fa-dollar-sign"></i></div>
-                        <h3>IT Cost Optimization</h3>
-                        <p>Strategic approaches to reduce IT spending without compromising performance.</p>
-                    </div>
-                    <div class="service-item-card animate-on-scroll" style="animation-delay: 0.4s;">
-                        <div class="service-item-icon"><i class="fas fa-desktop"></i></div>
-                        <h3>Modern Workplace Services</h3>
-                        <p>Empowering employees with the tools and support for a productive digital workspace.</p>
-                    </div>
-                </div>
+     COMPREHENSIVE IT SERVICES MODULE (Our Core Solutions)
+============================================ -->
+<section id="core-solutions" class="section comprehensive-services bg-light">
+    <div class="container">
+        <p class="section-subtitle animate-on-scroll">Our Core Solutions</p>
+        <h2 class="section-title animate-on-scroll">Comprehensive IT Services</h2>
+        <p class="section-description animate-on-scroll">
+            We offer a wide range of IT solutions tailored to meet the unique needs of your business, driving efficiency and innovation across all technological fronts.
+        </p>
+        <div class="comprehensive-services-grid">
+            <!-- Card 1: Cloud Services -->
+            <div class="service-item-card animate-on-scroll">
+                <div class="service-item-icon"><i class="fas fa-cloud-upload-alt"></i></div>
+                <h3>Cloud Services</h3>
+                <p>Scalable and secure cloud solutions for enhanced agility and efficiency.</p>
             </div>
-        </section>
-
+            <!-- Card 2: Managed IT Services -->
+            <div class="service-item-card animate-on-scroll" style="animation-delay: 0.1s;">
+                <div class="service-item-icon"><i class="fas fa-cogs"></i></div>
+                <h3>Managed IT Services</h3>
+                <p>Proactive management and support to ensure seamless IT operations.</p>
+            </div>
+            <!-- Card 3: IoT Integration -->
+            <div class="service-item-card animate-on-scroll" style="animation-delay: 0.2s;">
+                <div class="service-item-icon"><i class="fas fa-project-diagram"></i></div>
+                <h3>IoT Integration</h3>
+                <p>Connecting devices and systems for real-time data insights and automation.</p>
+            </div>
+            <!-- Card 4: IT Cost Optimization -->
+            <div class="service-item-card animate-on-scroll" style="animation-delay: 0.3s;">
+                <div class="service-item-icon"><i class="fas fa-dollar-sign"></i></div>
+                <h3>IT Cost Optimization</h3>
+                <p>Strategic approaches to reduce IT spending without compromising performance.</p>
+            </div>
+            <!-- Card 5: Modern Workplace Services -->
+            <div class="service-item-card animate-on-scroll" style="animation-delay: 0.4s;">
+                <div class="service-item-icon"><i class="fas fa-desktop"></i></div>
+                <h3>Modern Workplace Services</h3>
+                <p>Empowering employees with the tools and support for a productive digital workspace.</p>
+            </div>
+            <!-- Card 6: Technology Integration (NEW) -->
+            <div class="service-item-card animate-on-scroll" style="animation-delay: 0.5s;">
+                <div class="service-item-icon"><i class="fas fa-network-wired"></i></div> <!-- Consider a different icon if you prefer -->
+                <h3>Technology Integration</h3>
+                <p>Seamlessly connecting disparate systems and applications to streamline workflows and enhance data flow.</p>
+            </div>
+        </div>
+    </div>
+</section>
         <!-- ==========================
              WHO WE ARE SECTION MODULE
         =========================== -->
