--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+--- START OF FILE index.html ---
+
 <!doctype html>
 <html class="no-js" lang="en">
     <head>
@@ -15,9 +17,9 @@
         <!-- Main Stylesheet -->
         <link rel="stylesheet" href="css/style.css">
         <!-- Testimonials Module Stylesheet -->
-        <link rel="stylesheet" href="css/testimonials-styles.css"> <!-- ADD THIS -->
+        <link rel="stylesheet" href="css/testimonials-styles.css">
         <!-- Our Clients Module Stylesheet -->
-        <link rel="stylesheet" href="css/our-clients-styles.css">   <!-- ADD THIS -->
+        <link rel="stylesheet" href="css/our-clients-styles.css">
 
     </head>
     <body>
@@ -133,24 +135,24 @@
         =========================== -->
         <section class="section clients">
             <div class="container">
-                <h2 class="section-title animate-on-scroll">Trusted By Leading Companies</h2>
+                <h2 class="section-title animate-on-scroll">Official Partners and Trusted Companies</h2>
                 <div class="clients-logo-grid animate-on-scroll">
-                    <div class="client-logo-item">
-                        <img src="img/client-logo-1.png" alt="Client Company 1 Logo">
+                    <div class="client-logo-item anim-float-h-left">
+                        <img src="img/client-logo-1.png" alt="Client Company 1 Logo (Vyapar)">
                     </div>
-                    <div class="client-logo-item">
-                        <img src="img/client-logo-2.png" alt="Client Company 2 Logo">
+                    <div class="client-logo-item anim-float-v-up">
+                        <img src="img/client-logo-2.png" alt="Client Company 2 Logo (Zoom)">
                     </div>
-                    <div class="client-logo-item">
+                    <div class="client-logo-item anim-bounce-1">
                         <img src="img/client-logo-3.svg" alt="Client Company 3 Logo">
                     </div>
-                    <div class="client-logo-item">
+                    <div class="client-logo-item anim-float-h-right">
                         <img src="img/client-logo-4.png" alt="Client Company 4 Logo">
                     </div>
-                    <div class="client-logo-item">
+                    <div class="client-logo-item anim-pulse">
                         <img src="img/client-logo-5.png" alt="Client Company 5 Logo">
                     </div>
-                    <div class="client-logo-item">
+                    <div class="client-logo-item anim-bounce-2">
                         <img src="img/client-logo-6.svg" alt="Client Company 6 Logo">
                     </div>
                 </div>
@@ -348,3 +350,4 @@
         <script src="js/script.js"></script>
    </body>
 </html>
+--- END OF FILE index.html ---
