--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <img src="img/client-logo-2.png" alt="Client Company 2 Logo (Zoom)">
                     </div>
                     <div class="client-logo-item anim-bounce-1">
-                        <img src="img/client-logo-3.svg" alt="Client Company 3 Logo">
+                        <img src="img/client-logo-3.png" alt="Client Company 3 Logo">
                     </div>
                     <div class="client-logo-item anim-float-h-right">
                         <img src="img/client-logo-4.png" alt="Client Company 4 Logo">
@@ -153,7 +153,7 @@
                         <img src="img/client-logo-5.png" alt="Client Company 5 Logo">
                     </div>
                     <div class="client-logo-item anim-bounce-2">
-                        <img src="img/client-logo-6.svg" alt="Client Company 6 Logo">
+                        <img src="img/client-logo-6.png" alt="Client Company 6 Logo">
                     </div>
                 </div>
             </div>
