--- a/modules/footer.html
+++ b/modules/footer.html
@@ -35,8 +35,8 @@
             <div class="footer-section">
                 <h4>Contact & Support</h4>
                 <p><i class="fas fa-phone-alt"></i> <a href="tel:+918977540698">+918977540698</a></p>
-                <p><i class="fas fa-envelope"></i> <a href="psvs.swarop@gmail.com">psvs.swarop@gmail.com</a></p>
-                <p><i class="fas fa-map-marker-alt"></i> 123 Tech Street, Innovation City, USA</p>
+                <p><i class="fas fa-envelope"></i> <a href="info@gmail.com">info@gmail.com</a></p>
+                <p><i class="fas fa-map-marker-alt"></i> Hyderabad, INDIA</p>
             </div>
         </div>
         <div class="footer-bottom">
