--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <div data-include="modules/our-industries.html"></div>
             <div data-include="modules/cta.html"></div>
             <div data-include="modules/footer.html"></div>
+            <div data-include="modules/about-us.html"></div>
         </div>
 
         <script src="js/script.js"></script>
