--- a/modules/footer.html
+++ b/modules/footer.html
@@ -15,7 +15,7 @@
                 <h4>Company</h4>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#about-us">Who We Are</a></li>
+                    <li><a href="#about-us.html">Who We Are</a></li>
                     <li><a href="careers.html">Careers</a></li>
                     <li><a href="blog.html">Blog Insights</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
