--- a/modules/header.html
+++ b/modules/header.html
@@ -6,7 +6,7 @@
         <ul class="nav-menu">
             <li><a href="index.html" class="nav-link">Home</a></li>
             <li><a href="#solutions-offered" class="nav-link">Solutions</a></li>
-            <li><a href="#about-us" class="nav-link">About Us</a></li>
+            <li><a href="about-us.html" class="nav-link">About Us</a></li>
             <li><a href="blog.html" class="nav-link">Blog</a></li>
             <li><a href="careers.html" class="nav-link">Careers</a></li>
             <li><a href="contact.html" class="nav-link">Contact</a></li>
