--- a/about-us.html
+++ b/about-us.html
@@ -27,6 +27,64 @@
             }
             /* Styles for .about-page-content, .about-section, .team-grid etc. should be in style.css
                or a dedicated about-us-styles.css if they are specific to this layout */
+            /* Ensure about page specific content styles are loaded */
+            .about-page-content {
+                padding: 4rem 0;
+            }
+            .about-page-content .container {
+                max-width: 900px;
+            }
+            .about-section {
+                margin-bottom: 3rem;
+            }
+            .about-section h2 {
+                font-size: 2rem;
+                color: var(--primary-color);
+                margin-bottom: 1rem;
+                padding-bottom: 0.5rem;
+                border-bottom: 2px solid var(--light-accent-color);
+            }
+            .about-section p, .about-section ul {
+                font-size: 1.05rem;
+                line-height: 1.8;
+                margin-bottom: 1rem;
+            }
+            .about-section ul {
+                list-style-position: inside;
+                padding-left: 0; /* Or adjust as needed */
+            }
+            .about-section ul li {
+                 margin-bottom: 0.5rem;
+            }
+            .team-grid {
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+                gap: 2rem;
+                margin-top: 2rem;
+            }
+            .team-member-card {
+                background: var(--bg-white);
+                padding: 1.5rem;
+                border-radius: var(--border-radius-md);
+                box-shadow: var(--shadow-sm);
+                text-align: center;
+            }
+            .team-member-card img {
+                width: 120px;
+                height: 120px;
+                border-radius: 50%;
+                object-fit: cover;
+                margin-bottom: 1rem;
+                border: 3px solid var(--primary-color);
+            }
+            .team-member-card h3 {
+                font-size: 1.2rem;
+                margin-bottom: 0.25rem;
+            }
+            .team-member-card p.title {
+                font-size: 0.9rem;
+                color: var(--text-muted);
+            }
         </style>
     </head>
     <body>
