--- a/about-us.html
+++ b/about-us.html
@@ -11,81 +11,10 @@
         <link rel="shortcut icon" href="img/main-log.svg">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
+        <!-- Main Stylesheet (should contain styles for .about-page-hero, .about-page-content etc.) -->
         <link rel="stylesheet" href="css/style.css">
-        <!-- Add specific styles for about page content if necessary, or put in style.css -->
-        <style>
-            .about-page-hero {
-                background: var(--primary-gradient);
-                color: var(--text-light);
-                padding: 6rem 2rem;
-                text-align: center;
-                margin-top: 60px; /* Adjust if navbar height changes */
-            }
-            .about-page-hero h1 {
-                font-size: clamp(2.5rem, 5vw, 3.5rem);
-                margin-bottom: 1rem;
-            }
-            /* Styles for .about-page-content, .about-section, .team-grid etc. should be in style.css
-               or a dedicated about-us-styles.css if they are specific to this layout */
-            /* Ensure about page specific content styles are loaded */
-            .about-page-content {
-                padding: 4rem 0;
-            }
-            .about-page-content .container {
-                max-width: 900px;
-            }
-            .about-section {
-                margin-bottom: 3rem;
-            }
-            .about-section h2 {
-                font-size: 2rem;
-                color: var(--primary-color);
-                margin-bottom: 1rem;
-                padding-bottom: 0.5rem;
-                border-bottom: 2px solid var(--light-accent-color);
-            }
-            .about-section p, .about-section ul {
-                font-size: 1.05rem;
-                line-height: 1.8;
-                margin-bottom: 1rem;
-            }
-            .about-section ul {
-                list-style-position: inside;
-                padding-left: 0; /* Or adjust as needed */
-            }
-            .about-section ul li {
-                 margin-bottom: 0.5rem;
-            }
-            .team-grid {
-                display: grid;
-                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-                gap: 2rem;
-                margin-top: 2rem;
-            }
-            .team-member-card {
-                background: var(--bg-white);
-                padding: 1.5rem;
-                border-radius: var(--border-radius-md);
-                box-shadow: var(--shadow-sm);
-                text-align: center;
-            }
-            .team-member-card img {
-                width: 120px;
-                height: 120px;
-                border-radius: 50%;
-                object-fit: cover;
-                margin-bottom: 1rem;
-                border: 3px solid var(--primary-color);
-            }
-            .team-member-card h3 {
-                font-size: 1.2rem;
-                margin-bottom: 0.25rem;
-            }
-            .team-member-card p.title {
-                font-size: 0.9rem;
-                color: var(--text-muted);
-            }
-        </style>
+        <!-- Optional: Link a dedicated stylesheet for about page if you prefer -->
+        <!-- <link rel="stylesheet" href="css/about-page.css"> -->
     </head>
     <body>
         <div class="scroll-progress"></div>
@@ -95,7 +24,8 @@
             <div data-include="modules/header.html"></div>
 
             <!-- About Page Specific Hero -->
-            <header class="about-page-hero">
+            <!-- The .page-content-after-fixed-header class would be defined in style.css -->
+            <header class="about-page-hero page-content-after-fixed-header">
                 <div class="container">
                     <h1>About NS SYSTEMES IT SOLUTIONS</h1>
                     <p class="section-description" style="color: var(--text-light-secondary);">Dedicated to empowering your business through innovative technology and expert solutions.</p>
