--- a/modules/header.html
+++ b/modules/header.html
@@ -9,9 +9,9 @@
             <li><a href="about-us.html" class="nav-link">About Us</a></li>
             <li><a href="blog.html" class="nav-link">Blog</a></li>
             <li><a href="careers.html" class="nav-link">Careers</a></li>
-            <li><a href="contact.html" class="nav-link">Contact</a></li>
+            <li><a href="contact.html" class="nav-link">Contact</a></li> {/* <<< THIS ONE */}
         </ul>
-        <a href="contact.html" class="nav-cta-button">Get Started</a>
+        <a href="contact.html" class="nav-cta-button">Get Started</a> {/* <<< AND THIS ONE */}
         <div class="hamburger">
             <span></span>
             <span></span>
