--- a/contact.html
+++ b/contact.html
@@ -14,21 +14,19 @@
         <link rel="stylesheet" href="css/style.css">
         <!-- Add specific styles for contact page if necessary -->
         <style>
-            .contact-page-hero {
-                background: var(--primary-gradient); /* Or a different style for contact */
-                color: var(--text-light);
-                padding-bottom: 4rem; /* padding-top will be handled by .page-content-after-fixed-header */
-                padding-left: 2rem;
-                padding-right: 2rem;
-                text-align: center;
-            }
-            .contact-page-hero h1 {
-                font-size: clamp(2.5rem, 5vw, 3.5rem);
-                margin-bottom: 1rem;
-            }
+            /* .contact-page-hero STYLES ARE NO LONGER NEEDED IF HERO IS REMOVED */
+            /* You might want to adjust padding/margin for .contact-content-area
+               if it's now the first element after the navbar */
+
             .contact-content-area {
                 padding: 4rem 0;
+                /* Add top padding to account for the fixed navbar
+                   if this is the first visible content block */
             }
+             .contact-content-area.page-content-after-fixed-header { /* Apply this class if hero is removed */
+                padding-top: calc(var(--navbar-height-scrolled) + 4rem); /* Navbar height + desired top padding */
+             }
+
             .contact-content-area .container {
                 max-width: 900px;
             }
@@ -105,20 +103,23 @@
             <!-- Header Module -->
             <div data-include="modules/header.html"></div>
 
-            <!-- Contact Page Specific Hero -->
+            <!-- Contact Page Specific Hero - REMOVED -->
+            <!--
             <header class="contact-page-hero page-content-after-fixed-header">
                 <div class="container">
                     <h1>Contact Us</h1>
                     <p class="section-description" style="color: var(--text-light-secondary);">We'd love to hear from you! Reach out with any questions or to discuss your next project.</p>
                 </div>
             </header>
+            -->
 
             <!-- Main Content for Contact Us Page -->
-            <main class="contact-content-area">
+            <!-- Add class "page-content-after-fixed-header" to this main element if the hero above is removed -->
+            <main class="contact-content-area page-content-after-fixed-header">
                 <div class="container">
                     <div class="row" style="display: flex; flex-wrap: wrap; gap: 2rem;">
                         <div class="contact-form-section" style="flex: 2; min-width: 300px;">
-                            <h2>Send Us a Message</h2>
+                            <h2>Send Us a Message</h2> <!-- This h2 is still here -->
                             <form id="contactForm" action="YOUR_FORM_HANDLER_URL" method="POST">
                                 <div class="form-group">
                                     <label for="name">Full Name</label>
@@ -171,19 +172,5 @@
         </div>
 
         <script src="js/script.js"></script>
-        <!-- Optional: Add JS for form validation or AJAX submission -->
-        <!-- <script>
-            // Basic form submission alert (replace with actual form handling logic)
-            // const contactForm = document.getElementById('contactForm');
-            // if (contactForm) {
-            //     contactForm.addEventListener('submit', function(e) {
-            //         e.preventDefault(); // Prevent actual submission for this example
-            //         alert('Thank you for your message! (This is a demo, form not submitted)');
-            //         // Here you would typically use Fetch API or XMLHttpRequest to send data
-            //         // or let the form submit to 'YOUR_FORM_HANDLER_URL'.
-            //         contactForm.reset();
-            //     });
-            // }
-        </script> -->
    </body>
 </html>
